LIN-2250/LIN-2342 :: Fix whitespace in LinkkiTabLayout tabs

--- a/vaadin14/component/src/main/resources/META-INF/resources/frontend/styles/linkki-tab-layout.css
+++ b/vaadin14/component/src/main/resources/META-INF/resources/frontend/styles/linkki-tab-layout.css
@@ -2,8 +2,12 @@ vaadin-horizontal-layout.linkki-tab-layout[theme~="solid"] > vaadin-tabs {
   background: #eee;
 }
 
-vaadin-horizontal-layout.linkki-tab-layout > vaadin-tabs + vaadin-vertical-layout {
+vaadin-horizontal-layout.linkki-tab-layout > vaadin-vertical-layout {
   overflow: auto;
+}
+
+vaadin-horizontal-layout.linkki-tab-layout > vaadin-tabs {
+  overflow: hidden;
 }
 
 vaadin-horizontal-layout.linkki-tab-layout > vaadin-tabs > vaadin-tab {
